--- a/src/css/header.css
+++ b/src/css/header.css
@@ -8,7 +8,7 @@ body.active-menum{ overflow-y: hidden; }
 /* Header superior */
   .head-superior {
     width: 100%;
-    height: 40px;
+    height: 35px;
     background-color: var(--color-negro-logo);
     position: relative;
   }
@@ -17,7 +17,7 @@ body.active-menum{ overflow-y: hidden; }
       text-align: left;
       float: left;
       width: 40%;
-      height: 40px;
+      height: 35px;
       left: 140px;
       position: absolute;
     }
@@ -32,7 +32,7 @@ body.active-menum{ overflow-y: hidden; }
           text-decoration: none;
           color: var(--color-blanco-primary);
           padding-right: 20px;
-          padding: 15px;
+          padding: 12px;
           padding-left: 8px;
           font-weight: 600;
           font-size: 11px;
@@ -46,7 +46,7 @@ body.active-menum{ overflow-y: hidden; }
       text-align: right;
       float: right;
       width: 40%;
-      height: 40px;
+      height: 35px;
       right: 140px;
       position: absolute;
     }
@@ -61,7 +61,7 @@ body.active-menum{ overflow-y: hidden; }
         text-decoration: none;
         color: var(--color-blanco-primary);
         padding-left: 20px;
-        padding: 15px;
+        padding: 12px;
         font-weight: 600;
         font-size: 11px;
       }
@@ -74,7 +74,7 @@ body.active-menum{ overflow-y: hidden; }
         box-sizing: border-box;
         text-decoration: none;
         color: var(--color-blanco-primary);
-        margin-left: 15px;
+        margin-left: 12px;
       }
       
         .icon--facebook, .icon--instagram, .icon--twitter{
@@ -82,7 +82,7 @@ body.active-menum{ overflow-y: hidden; }
           list-style-type: none;
           font-weight: 600;
           color: var(--color-blanco-primary);
-          font-size: 18px;
+          font-size: 15px;
           box-sizing: border-box;
           padding: 0;
           margin: 0;
@@ -99,13 +99,13 @@ body.active-menum{ overflow-y: hidden; }
 /* Header inferior */
   header {
     width: 100%;
-    height: 90px;
+    height: 80px;
     background-color: var(--color-rojo-logo); 
   }
     
     header #logo{
       float: left;
-      height: 90px;
+      height: 80px;
       margin-left: 140px;
       display: flex;
       align-items: center;
@@ -113,8 +113,8 @@ body.active-menum{ overflow-y: hidden; }
     }
 
       header #logo img{
-        height: 85px;
-        padding: 10px;
+        height: 75px;
+        padding: 5px;
         padding-left: 0px;
       }
 
@@ -124,7 +124,7 @@ body.active-menum{ overflow-y: hidden; }
       padding: 25px 20px 0px 0px;
       padding: 25px;
       margin-right: 105px;
-      height: 90px;
+      height: 80px;
     }
     
       .menu-icon {
@@ -132,7 +132,6 @@ body.active-menum{ overflow-y: hidden; }
         font-size: 30px;
         color: var(--color-blanco-primary);
         cursor: pointer;
-        margin-top: 5px;
       }
       
       .menu-list {
@@ -148,7 +147,7 @@ body.active-menum{ overflow-y: hidden; }
           font-size: 80%;
           display: inline-block;
           padding: 10px;
-          padding-top: 15px;
+          padding-top: 8px;
           box-sizing: border-box;
           margin-left: 10px;
         }
@@ -215,7 +214,7 @@ body.active-menum{ overflow-y: hidden; }
       background-color: var(--color-rojo-logo);
       width: 100%;
       height: 100vh;
-      top: 90px;
+      top: 80px;
       left: 0px;
       border-top: 1px solid var(--color-blanco-primary);
     }
@@ -229,6 +228,7 @@ body.active-menum{ overflow-y: hidden; }
         width: 100%;
         border-bottom: 2px solid rgba(255, 255, 255, 0.421);
         margin-left: 0px;
+        padding-top: 15px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -248,6 +248,7 @@ body.active-menum{ overflow-y: hidden; }
 
 @media screen and (max-width: 780px ){
   header #logo{ margin-left: 50px; }
+    header #logo img{ height: 70px; }
   nav{ margin-right: 35px; }
 }
 
