--- a/src/css/about.css
+++ b/src/css/about.css
@@ -93,8 +93,9 @@ body.active_video{ overflow-y: hidden; }
 
             .about_container_right{
                 width: 40%;
-                height: auto;
+                height: 550px;
                 float: right;
+                text-align: center;
                 animation: fadeInImg 1s ease;
             }
 
@@ -104,8 +105,8 @@ body.active_video{ overflow-y: hidden; }
             }
 
                 .about_container_right img{
-                    width: 100%;
-                    height: 450px;
+                    max-width: 100%;
+                    max-height: 450px;
                     border-radius: 8px;
                 }
 
@@ -263,8 +264,6 @@ body.active_video{ overflow-y: hidden; }
             .about_container_left, .about_container_right{ width: 100%; height: auto;
                 float: none; margin-bottom: 2rem; 
             }
-            .about_container_right{ text-align: center; }
-                .about_container_right img{  width: auto; }
 }
 
 @media screen and (max-width: 940px ){
@@ -283,8 +282,6 @@ body.active_video{ overflow-y: hidden; }
 }
 
 @media screen and (max-width: 450px ){
-    .about_container_right img{ width: 100%; }
-
     .about_container_2{ height: auto; }
         .about_funfact{ display: block; height: auto; margin-top: 2rem; }
             .about_funfact_block{ width: 100%; height: auto; margin-bottom: 2rem; }
