--- a/src/css/ventajas.css
+++ b/src/css/ventajas.css
@@ -21,6 +21,7 @@
         width: 100%;
         margin-left: 140px;
         margin-right: 140px;
+        max-width: 1070px;
     }
 
         .ventajas_title{
