--- a/src/css/about.css
+++ b/src/css/about.css
@@ -11,6 +11,7 @@ body.active_video{ overflow-y: hidden; }
         margin-right: 140px;
         width: 100%;
         height: 1200px;
+        max-width: 1070px;
     }
 
         .about_container_1{
@@ -264,7 +265,7 @@ body.active_video{ overflow-y: hidden; }
             }
 }
 
-@media screen and (max-width: 940px ){
+@media screen and (max-width: 990px ){
     .about_container{ margin-left: 0px; margin-right: 0px; width: 80%; }
 }
 
