--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,172 +10,182 @@ body.active-menum{ overflow-y: hidden; }
     width: 100%;
     height: 35px;
     background-color: var(--color-negro-logo);
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
-    .container-left{
-      text-align: left;
-      float: left;
-      width: 40%;
-      height: 35px;
-      left: 140px;
-      position: absolute;
+    .container_head-superior{
+      width: 100%;
+      max-width: 1070px;
+      margin-left: 140px;
+      margin-right: 140px;
     }
 
-      .container-left ul{
+      .container-left{
+        text-align: left;
+        float: left;
+        width: 50%;
+        height: 35px;
+      }
+
+        .container-left ul{
+          list-style: none;
+        }
+
+          .container-left li{
+            display: inline-block;
+            box-sizing: border-box;
+            text-decoration: none;
+            color: var(--color-blanco-primary);
+            padding-right: 20px;
+            padding: 12px;
+            padding-left: 8px;
+            font-weight: 600;
+            font-size: 11px;
+          }
+
+          .container-left li i{
+            font-weight: 600;
+          }
+
+      .container-right{
+        text-align: right;
+        float: right;
+        width: 50%;
+        height: 35px;
+      }
+
+      .container-right ul{
         list-style: none;
       }
 
-        .container-left li{
+        .headersup_horario{
           display: inline-block;
           box-sizing: border-box;
           text-decoration: none;
           color: var(--color-blanco-primary);
-          padding-right: 20px;
+          padding-left: 20px;
           padding: 12px;
-          padding-left: 8px;
           font-weight: 600;
           font-size: 11px;
         }
+          .headersup_horario i{
+            font-weight: 600;
+          }
 
-        .container-left li i{
-          font-weight: 600;
-        }
-
-    .container-right{
-      text-align: right;
-      float: right;
-      width: 40%;
-      height: 35px;
-      right: 140px;
-      position: absolute;
-    }
-
-    .container-right ul{
-      list-style: none;
-    }
-
-      .headersup_horario{
-        display: inline-block;
-        box-sizing: border-box;
-        text-decoration: none;
-        color: var(--color-blanco-primary);
-        padding-left: 20px;
-        padding: 12px;
-        font-weight: 600;
-        font-size: 11px;
-      }
-        .headersup_horario i{
-          font-weight: 600;
-        }
-
-      .headersup_social{
-        display: inline-block;
-        box-sizing: border-box;
-        text-decoration: none;
-        color: var(--color-blanco-primary);
-        margin-left: 12px;
-      }
-      
-        .icon--facebook, .icon--instagram, .icon--twitter{
-          overflow-wrap: break-word;
-          list-style-type: none;
-          font-weight: 600;
-          color: var(--color-blanco-primary);
-          font-size: 15px;
-          box-sizing: border-box;
-          padding: 0;
-          margin: 0;
-          -webkit-font-smoothing: antialiased;
+        .headersup_social{
           display: inline-block;
-          font-style: normal;
-          font-variant: normal;
-          text-rendering: auto;
-          line-height: 1;
-          font-family: "font awesome 5 brands";
+          box-sizing: border-box;
+          text-decoration: none;
+          color: var(--color-blanco-primary);
+          margin-left: 12px;
         }
+        
+          .icon--facebook, .icon--instagram, .icon--twitter{
+            overflow-wrap: break-word;
+            list-style-type: none;
+            font-weight: 600;
+            color: var(--color-blanco-primary);
+            font-size: 15px;
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+            -webkit-font-smoothing: antialiased;
+            display: inline-block;
+            font-style: normal;
+            font-variant: normal;
+            text-rendering: auto;
+            line-height: 1;
+            font-family: "font awesome 5 brands";
+          }
 
 
 /* Header inferior */
   header {
     width: 100%;
     height: 80px;
-    background-color: var(--color-rojo-logo); 
+    background-color: var(--color-rojo-logo);
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
-    
-    header #logo{
-      float: left;
-      height: 80px;
+    .container_header{
+      width: 100%;
+      max-width: 1070px;
       margin-left: 140px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      margin-right: 140px;
     }
-
-      header #logo img{
-        height: 75px;
-        padding: 5px;
-        padding-left: 0px;
+      header #logo{
+        float: left;
+        height: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
-
-    nav {
-      float: right;
-      padding: 25px 20px 0px 0px;
-      padding: 25px;
-      margin-right: 105px;
-      height: 80px;
-    }
-    
-      .menu-icon {
-        display: none;
-        font-size: 30px;
-        color: var(--color-blanco-primary);
-        cursor: pointer;
-      }
-      
-      .menu-list {
-        list-style: none;
-        display: block;
-      }
-
-      .menu-list.close{
-        right: -100%;
-      }
-      
-        nav ul li {
-          font-size: 80%;
-          display: inline-block;
-          padding: 10px;
-          padding-top: 8px;
-          box-sizing: border-box;
-          margin-left: 10px;
+        header #logo img{
+          height: 75px;
+          padding: 5px;
+          padding-left: 0px;
         }
 
-        nav ul li .active{
-          color: #ffdd40;
-          border-bottom: 2px solid #ffdd40;
-          display: block;
-          width: 100%;
-          height: 22px;
+
+      nav {
+        float: right;
+        padding-top: 25px;
+        height: 80px;
+      }
+      
+        .menu-icon {
+          display: none;
+          font-size: 30px;
+          color: var(--color-blanco-primary);
+          cursor: pointer;
         }
         
-          nav ul li #btnSolicitar{
-            cursor: pointer;
-            padding: 15px 15px;
-            border-radius: 30px;
-            background: var(--color-amarillo-primary); 
+        .menu-list {
+          list-style: none;
+          display: block;
+        }
+
+        .menu-list.close{
+          right: -100%;
+        }
+        
+          nav ul li {
+            font-size: 80%;
+            display: inline-block;
+            padding-left: 20px;
+            padding-top: 8px;
+            box-sizing: border-box;
+            margin-left: 10px;
+          }
+
+          nav ul li .active{
+            color: #ffdd40;
+            border-bottom: 2px solid #ffdd40;
+            display: block;
+            width: 100%;
+            height: 22px;
           }
           
-          nav ul li a {
-            text-decoration: none;
-            color: var(--color-blanco-primary);
-            font-weight: bold;
-            cursor: pointer;
-          }
-            a:hover {
-              color: #a5bdcd;
+            nav ul li #btnSolicitar{
+              cursor: pointer;
+              padding: 15px 15px;
+              border-radius: 30px;
+              background: var(--color-amarillo-primary); 
             }
+            
+            nav ul li a {
+              text-decoration: none;
+              color: var(--color-blanco-primary);
+              font-weight: bold;
+              cursor: pointer;
+            }
+              a:hover {
+                color: #a5bdcd;
+              }
 
 
 /* Header responsive */
@@ -185,11 +195,9 @@ body.active-menum{ overflow-y: hidden; }
 }
 
 @media screen and (max-width: 990px ){
-  header #logo{
+  .container_header{
     margin-left: 90px;
-  }
-  nav{
-    margin-right: 75px;
+    margin-right: 90px;
   }
 }
 
@@ -229,6 +237,8 @@ body.active-menum{ overflow-y: hidden; }
         border-bottom: 2px solid rgba(255, 255, 255, 0.421);
         margin-left: 0px;
         padding-top: 15px;
+        padding-left: 0px;
+        padding: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -247,14 +257,12 @@ body.active-menum{ overflow-y: hidden; }
 }
 
 @media screen and (max-width: 780px ){
-  header #logo{ margin-left: 50px; }
+  .container_header{ margin-left: 50px; margin-right: 50px; }
     header #logo img{ height: 70px; }
-  nav{ margin-right: 35px; }
 }
 
 @media screen and (max-width: 550px ){
-  header #logo{ margin-left: 15px; }
-  nav{ margin-right: 0px; }
+  .container_header{ margin-left: 15px; margin-right: 15px; }
 }
 
 @media screen and (max-width: 210px ){
