--- a/src/css/precios.css
+++ b/src/css/precios.css
@@ -1,20 +1,26 @@
 
 
 .precios {
-    width: 100%;
-    height: 800px;
-    text-align: center;
-    background-color: #f4f7fc;
-  }
+  width: 100%;
+  height: 800px;
+  text-align: center;
+  background-color: #f4f7fc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+  .container_precios{
+    width: 100%;
+    margin-left: 140px;
+    margin-right: 140px;
+    max-width: 1070px;
+  }
     .precios_head{
       display: flex;
       align-items: center;
       justify-content: center;
     }
-      .precios_head_title{
-        margin-top: 80px;
-      }
   
       .precios_head h2{
         color: var(--color-rojo-logo);
@@ -79,8 +85,6 @@
   
     
     .precios_contents{
-      margin-left: 140px;
-      margin-right: 140px;
       display: flex;
       flex-wrap: wrap;
       gap: 23px;
@@ -124,18 +128,19 @@
   .precios {
     height: 1240px;
   }
-
-    .precios_contents{
+    .container_precios{
       margin-left: 0px;
       margin-right: 0px;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
     }
-
-      .precios_notas_texto{
-        width: 80%;
+      .precios_contents{
+        width: 100%;
+        justify-content: center;
+        align-items: center;
       }
+
+        .precios_notas_texto{
+          width: 80%;
+        }
 
 }
 
@@ -145,6 +150,7 @@
     .precios_head_title {
       width: 80%;
       margin-bottom: 25px;
+      margin-top: 70px;
     }
 
     .precios_options{ 
