--- a/src/css/ventajas.css
+++ b/src/css/ventajas.css
@@ -106,7 +106,7 @@
 
                         .cardv_text p{
                             font-size: 11px;
-                            color: #0e2b3d;
+                            color: #666;
                         }
 
 
