--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
 }
 
 :root{
-  --color-rojo-logo: #eb3135;
+  --color-rojo-logo: #fc4649;
   --color-rojo-logo-secundary: #eb3134e5;
-  --color-rojo-logo-trans: #eb3135c9;
+  --color-rojo-logo-trans: #f46365;
   --color-negro-logo: #000000;
   --color-grey-logo: #383536;
   --color-amarillo-primary: rgba(255, 255, 0, 0.623);
