--- a/src/css/about.css
+++ b/src/css/about.css
@@ -161,8 +161,8 @@ body.active_video{ overflow-y: hidden; }
                     width: 100%;
                     height: 100%;
                     background-image: linear-gradient(
-                    rgba(255, 255, 255, 0.100),
-                    rgba(255, 255, 255, 0.100)
+                        rgba(0,0,0,0.2),
+                        rgba(0,0,0,0.2)
                     ),url('../img/img_autopista.jpg');
                     background-size: cover;
                     background-repeat: no-repeat;
