--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -2,11 +2,12 @@
   width: 100%;
   height: 570px;
   background-image: linear-gradient(
-  rgba(0,0,0,0.5),
-  rgba(0,0,0,0.5)
-  ),url('../img/fondo.jpg');
+  rgba(0,0,0,0.6),
+  rgba(0,0,0,0.6)
+  ),url('../img/fondo.png');
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   position: relative;
   background-attachment: fixed;
   display: flex;
